--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,3 +15,18 @@ h1 {
   font-family: "Merriweather", serif;
   font-size: 32px;
 }
+
+h2 {
+  font-family: "Merriweather", serif;
+  font-size: 24px;
+}
+
+p {
+  font-family: "Merriweather", serif;
+  font-size: 18px;
+}
+
+p1{
+  font-family: "Merriweather", serif;
+  font-size: 16px;
+}
