--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@ body {
   padding: 5px 25px;
   font-size: 18px;
   margin: 0;
-  color: #444;
+  color: #0b92e0;
 }
 
 h1 {
@@ -24,9 +24,11 @@ h2 {
 p {
   font-family: "Merriweather", serif;
   font-size: 18px;
+  font 
 }
 
 p1{
   font-family: "Merriweather", serif;
   font-size: 16px;
+  margin-left: 30px;
 }
