--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
 
 body {
-  background-color: white;
+  background-color: light-grey;
   font-family: "Open Sans", sans-serif;
   padding: 5px 25px;
   font-size: 18px;
