--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,35 +1,35 @@
 /* Fonts from Google Fonts - more at https://fonts.google.com */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
-@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
+@import url('https://fonts.googleapis.com/css?family=Electrolize');
 
 body {
-  background-color: light-grey;
-  font-family: "Open Sans", sans-serif;
-  padding: 5px 25px;
+  background-color: lightgrey;
+  font-family: "Orbitron", sans-serif;
+  padding: 15px 15px;
   font-size: 18px;
   margin: 0;
   color: royalblue;
 }
 
 h1 {
-  font-family: "Merriweather", serif;
+  font-family: "Electrolize", serif;
   font-size: 32px;
   font-style: oblique
 }
 
 h2 {
-  font-family: "Merriweather", serif;
+  font-family: "Electrolize", serif;
   font-size: 24px;
 }
 
 p {
-  font-family: "Merriweather", serif;
+  font-family: "Electrolize", serif;
   font-size: 18px;
   color: black;
 }
 
 p1{
-  font-family: "Merriweather", serif;
+  font-family: "Electrolize", serif;
   font-size: 16px;
   margin-left: 30px;
   color: black;
